Segundo dia estrutura HTML e CSS

--- a/index.html
+++ b/index.html
@@ -9,34 +9,67 @@
     <title>Home</title>
 </head>
 <body>
-      <div class "fundo_verde">
-         <div>
-          <img src="projetosFigmaImg/img.css/jogo-de-post-it.jpg" alt="post-it">
+             <a href="https://www.figma.com/proto/y6j1WAzqGkxcNyhMGMlFMj/Casa-Container?node-id=30%3A13&scaling=scale-down" target="_blank">
+             <img src="projetosFigmaImg/img.css/html_casa_container.png" alt="casa_container">
+             </a>
+
+             <a href="https://www.figma.com/proto/FbCCXZEWyjFyYcDaTsDT1d/Lidia-Brigadeiros?scaling=scale-down&node-id=93%3A0" target="_blank">
+            <img src="projetosFigmaImg/img.css/html_lidia_brigadeiros.png" alt="Lidia_Brigadeiros">
+             </a>
+
+             <a href="https://www.figma.com/proto/Hi36Fna9BevazBC01HJMzY/Match-Games?node-id=5%3A2&scaling=scale-down" target="_blank">
+            <img src="projetosFigmaImg/img.css/html_match_games.png" alt="Match_games">
+            </a>
+
            <div>
-             <a href="https://www.figma.com/proto/y6j1WAzqGkxcNyhMGMlFMj/Casa-Container?node-id=30%3A13&scaling=scale-down" target="_blank"></a><img src="projetosFigmaImg/img.css/casa_container.png" alt="casa_container">
-             <a href="https://www.figma.com/proto/FbCCXZEWyjFyYcDaTsDT1d/Lidia-Brigadeiros?scaling=scale-down&node-id=93%3A0" target="_blank"></a><img src="projetosFigmaImg/img.css/Lidia_brigadeiros.png" alt="Lidia_Brigadeiros">
-             <a href="https://www.figma.com/proto/Hi36Fna9BevazBC01HJMzY/Match-Games?node-id=5%3A2&scaling=scale-down" target="_blank"></a><img src="projetosFigmaImg/img.css/match_games.png" alt="Match_games">
+
+             <a href="https://www.figma.com/proto/JX9HGMxpM2nBuatv2idxq9/IlustraTerapia?scaling=scale-down&node-id=1%3A1035" target="_blank">
+             <img src="projetosFigmaImg/img.css/html_ilustra_terapia.png" alt="Ilustra_Terapia">
+             </a>
+
+             <a href="https://www.figma.com/proto/o56u2lMf2AWqAswoPyky0t/Terapia?node-id=3%3A2&scaling=scale-down" taget="_blank">
+             <img src="projetosFigmaImg/img.css/html_terapia.png" alt="Terapia">
+             </a>
+
+             <a href="https://www.figma.com/proto/P3DBJjfsAxjwYf0hjklpMO/Bolacha?node-id=3%3A2&scaling=scale-down" target="_blank">
+             <img src="projetosFigmaImg/img.css/html_bolacha.png" alt="Bolacha">
+             </a>
+
            </div>
            <div>
-             <a herf="https://www.figma.com/proto/JX9HGMxpM2nBuatv2idxq9/IlustraTerapia?scaling=scale-down&node-id=1%3A1035" target="_blank"></a><img src="projetosFigmaImg/img.css/ilustra_terapia.png" alt="Ilustra_Terapia">
-             <a href="https://www.figma.com/proto/o56u2lMf2AWqAswoPyky0t/Terapia?node-id=3%3A2&scaling=scale-down" taget="_blank"></a><img src="projetosFigmaImg/img.css/Terapia.png" alt="Terapia">
-             <a href="https://www.figma.com/proto/P3DBJjfsAxjwYf0hjklpMO/Bolacha?node-id=3%3A2&scaling=scale-down" target="_blank"></a><img src="projetosFigmaImg/img.css/Bolacha.png" alt="Bolacha">
-           </div>
-           <div>
-             <a href="https://www.figma.com/proto/bzrXB6MCRDVVIpvY4xBQfW/Obo%C3%A9Brasil?node-id=27%3A28&scaling=min-zoom" target="_blank"></a><img src="projetosFigmaImg/img.css/Oboé_Brasil.png" alt="Oboé_Brasil">
-             <a href="https://www.figma.com/proto/POXvjuTQCcRiuh1MSrvtpN/Est%C3%BAdio-Ilma-Queiroz?scaling=scale-down&node-id=48%3A93" target="_blank"></a><img src="projetosFigmaImg/img.css/Estúdio_Ilma_Queiróz.png" alt="Estúdio_Ilma_Queiróz">
-             <a href="https://www.figma.com/proto/MiryOzUruISvbbvLmut3fl/galeriafotografica?scaling=scale-down&node-id=19%3A2" target="_blank"></a><img src="projetosFigmaImg/img.css/Galeria_fotográfica.png" alt="Galeria_Fotográfica">
+             <a href="https://www.figma.com/proto/bzrXB6MCRDVVIpvY4xBQfW/Obo%C3%A9Brasil?node-id=27%3A28&scaling=min-zoom" target="_blank">
+             <img src="projetosFigmaImg/img.css/html_oboé_brasil.png" alt="Oboé_Brasil">
+             </a>
+
+             <a href="https://www.figma.com/proto/POXvjuTQCcRiuh1MSrvtpN/Est%C3%BAdio-Ilma-Queiroz?scaling=scale-down&node-id=48%3A93" target="_blank">
+              <img src="projetosFigmaImg/img.css/html_estudio_ilma_queiróz.png" alt="Estúdio_Ilma_Queiróz">
+             </a>
+
+             <a href="https://www.figma.com/proto/MiryOzUruISvbbvLmut3fl/galeriafotografica?scaling=scale-down&node-id=19%3A2" target="_blank" alt="Galeria_Fotográfica">
+              <img src="projetosFigmaImg/img.css/html_galeria_fotográfica.png" alt="Galeria_Fotográfica">
+            </a>
+
            </div>  
          </div>
-         <div>    
-          <a href="romenia.html"<img src="projetosFigmaImg/img.css/romeniaIshiyama.png" alt="Romênia Ishiyama">   
-         </div>
+
          <div>
-          <a href="projetos.html"<img src="projetosFigmaImg/img.css/projetos.png" alt="Projetos">
+          <a href="romenia.html">
+            <img src="projetosFigmaImg/img.css/romeniaIshiyama.png" alt="Romênia Ishiyama"> 
+          </a>
          </div>
+
+         <div>
+          <a href="projetos.html">
+          <img src="projetosFigmaImg/img.css/projetos.png" alt="Projetos">
+          </a>
+         </div>
+
           <div>
-          <a href="projetos.html"<img src="projetosFigmaImg/img.css/figma.png" alt="Figma">
-         </div>
+          <a href="figma.html">
+          <img src="projetosFigmaImg/img.css/figma.png" alt="Figma">
+          </a>
+          </div>
+
     </div>  
 </body>
 </html>
