--- a/romenia.html
+++ b/romenia.html
@@ -21,14 +21,38 @@
            
             Aliar as skills acumuladas dos anos anteriores de trabalho à transição de carreita é um pilar importante, que reflete e imprimi minha identidade na jornada profissional.
     </p>
-    <div class="img-icon">
-        <a href="romeniaishiyama@gmail.com" target="_blank"></a><img src="projetosFigmaImg/img.css/email.png" alt="e-mail">
-        <a href="https://github.com/Roms2019" target="_blank"></a><img src="projetosFigmaImg/img.css/github.png" alt="Github">
-        <a href="https://www.instagram.com/roms_flaneur" target="_blank"></a><img src="projetosFigmaImg/img.css/instagram.png" alt="Instagram">
-        <a href="https://twitter.com/Romeniaishiyama" target="_blank"></a><img src="projetosFigmaImg/img.css/twitter.png" alt="Twitter">
-        <a href="https://www.youtube.com/user/Romenia2008" target="_blank"></a><img src="projetosFigmaImg/img.css/youtube.png" alt="Youtube">
-        <a href="https://www.facebook.com/romeniaishiyama" target="_blank"></a><img src="projetosFigmaImg/img.css/facebook.png" alt="Facebook">
+
+    <div class="absolute">
+
+        <a href="romeniaishiyama@gmail.com" target="_blank"alt="e-mail">
+        <img src="projetosFigmaImg/img.css/email.png" width="2%" height="5%">
+        </a>
+
+        <a href="https://github.com/Roms2019" target="_blank"alt="Github">
+        <img src="projetosFigmaImg/img.css/github.png" width="2%" height="5%">
+        </a>
+
+        <a href="https://www.instagram.com/roms_flaneur" target="_blank" alt="Instagram">
+        <img src="projetosFigmaImg/img.css/instagram.png" width="2%" height="5%">
+        </a>
+
+        <a href="https://twitter.com/Romeniaishiyama" target="_blank" alt="Twitter">
+        <img src="projetosFigmaImg/img.css/twitter.png" width="2%" height="5%">
+        </a>
+
+        <a href="https://www.youtube.com/user/Romenia2008" target="_blank" alt="Youtube">
+        <img src="projetosFigmaImg/img.css/youtube.png" width="2%" height="5%">
+        </a>
+
+        <a href="https://www.facebook.com/romeniaishiyama" target="_blank" alt="Facebook">
+        <img src="projetosFigmaImg/img.css/facebook.png" width="2%" height="5%">
+        </a>    
+
     </div>
+    
     <p1>Romênia Ishiyama</p1>
+
 </body>
 </html>
+
+
