Terceiro dia de projeto. home e projetos responsivos.

--- a/figma.html
+++ b/figma.html
@@ -35,10 +35,14 @@
             bilidade do código programado em CSS (Cascading Style
             Sheet), adiantando a documentação fiel para a etapa 
             seguinte do projeto.</p>
+
+            <footer>
             <p>
             <a href="www.figma.com">www.figma.com</a> 
             </p>
-            <img src="projetosFigmaImg/img.css/figma_fundo_branco.png">
-
+             
+            <img class="figma" src="projetosFigmaImg/img.css/figma_fundo_branco.png">
+            </footer>
+            
 </body>
 </html>
