--- a/index.html
+++ b/index.html
@@ -1,75 +1,87 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="projetosFigmaImg/style.css">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/pecita" type="text/css"/>
-    <title>Home</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="projetosFigmaImg/style.css">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/pecita" type="text/css" />
+  <title>Home</title>
 </head>
+
 <body>
-             <a href="https://www.figma.com/proto/y6j1WAzqGkxcNyhMGMlFMj/Casa-Container?node-id=30%3A13&scaling=scale-down" target="_blank">
-             <img src="projetosFigmaImg/img.css/html_casa_container.png" alt="casa_container">
-             </a>
+  <section class="grupo-blocos">
 
-             <a href="https://www.figma.com/proto/FbCCXZEWyjFyYcDaTsDT1d/Lidia-Brigadeiros?scaling=scale-down&node-id=93%3A0" target="_blank">
-            <img src="projetosFigmaImg/img.css/html_lidia_brigadeiros.png" alt="Lidia_Brigadeiros">
-             </a>
+    <!-- 1 linha de cards -->
+    <div class="div-color">
+      <a href="https://www.figma.com/proto/y6j1WAzqGkxcNyhMGMlFMj/Casa-Container?node-id=30%3A13&scaling=scale-down"
+        target="_blank">
+        <img class="blocos" src="projetosFigmaImg/img.css/html_casa_container.png" alt="casa_container">
+      </a>
 
-             <a href="https://www.figma.com/proto/Hi36Fna9BevazBC01HJMzY/Match-Games?node-id=5%3A2&scaling=scale-down" target="_blank">
-            <img src="projetosFigmaImg/img.css/html_match_games.png" alt="Match_games">
-            </a>
+      <a href="https://www.figma.com/proto/FbCCXZEWyjFyYcDaTsDT1d/Lidia-Brigadeiros?scaling=scale-down&node-id=93%3A0"
+        target="_blank">
+        <img class="blocos" src="projetosFigmaImg/img.css/html_lidia_brigadeiros.png" alt="Lidia_Brigadeiros">
+      </a>
 
-           <div>
+      <a href="https://www.figma.com/proto/Hi36Fna9BevazBC01HJMzY/Match-Games?node-id=5%3A2&scaling=scale-down"
+        target="_blank">
+        <img class="blocos" src="projetosFigmaImg/img.css/html_match_games.png" alt="Match_games">
+      </a>
+    </div>
 
-             <a href="https://www.figma.com/proto/JX9HGMxpM2nBuatv2idxq9/IlustraTerapia?scaling=scale-down&node-id=1%3A1035" target="_blank">
-             <img src="projetosFigmaImg/img.css/html_ilustra_terapia.png" alt="Ilustra_Terapia">
-             </a>
+    <!-- 2 linha de cards -->
+    <div class="div-color">
+      <a href="https://www.figma.com/proto/JX9HGMxpM2nBuatv2idxq9/IlustraTerapia?scaling=scale-down&node-id=1%3A1035"
+        target="_blank">
+        <img class="blocos" src="projetosFigmaImg/img.css/html_ilustra_terapia.png" alt="Ilustra_Terapia">
+      </a>
 
-             <a href="https://www.figma.com/proto/o56u2lMf2AWqAswoPyky0t/Terapia?node-id=3%3A2&scaling=scale-down" taget="_blank">
-             <img src="projetosFigmaImg/img.css/html_terapia.png" alt="Terapia">
-             </a>
+      <a href="https://www.figma.com/proto/o56u2lMf2AWqAswoPyky0t/Terapia?node-id=3%3A2&scaling=scale-down"
+        taget="_blank">
+        <img class="blocos" src="projetosFigmaImg/img.css/html_terapia.png" alt="Terapia">
+      </a>
 
-             <a href="https://www.figma.com/proto/P3DBJjfsAxjwYf0hjklpMO/Bolacha?node-id=3%3A2&scaling=scale-down" target="_blank">
-             <img src="projetosFigmaImg/img.css/html_bolacha.png" alt="Bolacha">
-             </a>
+      <a href="https://www.figma.com/proto/P3DBJjfsAxjwYf0hjklpMO/Bolacha?node-id=3%3A2&scaling=scale-down"
+        target="_blank">
+        <img class="blocos" src="projetosFigmaImg/img.css/html_bolacha.png" alt="Bolacha">
+      </a>
+    </div>
 
-           </div>
-           <div>
-             <a href="https://www.figma.com/proto/bzrXB6MCRDVVIpvY4xBQfW/Obo%C3%A9Brasil?node-id=27%3A28&scaling=min-zoom" target="_blank">
-             <img src="projetosFigmaImg/img.css/html_oboé_brasil.png" alt="Oboé_Brasil">
-             </a>
+    <!-- 3 linha de cards -->
+    <div class="div-color">
+      <a href="https://www.figma.com/proto/bzrXB6MCRDVVIpvY4xBQfW/Obo%C3%A9Brasil?node-id=27%3A28&scaling=min-zoom"
+        target="_blank">
+        <img class="blocos" src="projetosFigmaImg/img.css/html_oboé_brasil.png" alt="Oboé_Brasil">
+      </a>
 
-             <a href="https://www.figma.com/proto/POXvjuTQCcRiuh1MSrvtpN/Est%C3%BAdio-Ilma-Queiroz?scaling=scale-down&node-id=48%3A93" target="_blank">
-              <img src="projetosFigmaImg/img.css/html_estudio_ilma_queiróz.png" alt="Estúdio_Ilma_Queiróz">
-             </a>
+      <a href="https://www.figma.com/proto/POXvjuTQCcRiuh1MSrvtpN/Est%C3%BAdio-Ilma-Queiroz?scaling=scale-down&node-id=48%3A93"
+        target="_blank">
+        <img class="blocos" src="projetosFigmaImg/img.css/html_estudio_ilma_queiróz.png" alt="Estúdio_Ilma_Queiróz">
+      </a>
 
-             <a href="https://www.figma.com/proto/MiryOzUruISvbbvLmut3fl/galeriafotografica?scaling=scale-down&node-id=19%3A2" target="_blank" alt="Galeria_Fotográfica">
-              <img src="projetosFigmaImg/img.css/html_galeria_fotográfica.png" alt="Galeria_Fotográfica">
-            </a>
+      <a href="https://www.figma.com/proto/MiryOzUruISvbbvLmut3fl/galeriafotografica?scaling=scale-down&node-id=19%3A2"
+        target="_blank" alt="Galeria_Fotográfica">
+        <img class="blocos" src="projetosFigmaImg/img.css/html_galeria_fotográfica.png" alt="Galeria_Fotográfica">
+      </a>
+    </div>
+  </section>
 
-           </div>  
-         </div>
+  <!-- footer -->
+  <footer>
+    <a href="romenia.html">
+      <img class="footer" src="projetosFigmaImg/img.css/html2romeniaishiyama.png" alt="Romênia Ishiyama">
+    </a>
 
-         <div>
-          <a href="romenia.html">
-            <img src="projetosFigmaImg/img.css/romeniaIshiyama.png" alt="Romênia Ishiyama"> 
-          </a>
-         </div>
+    <a href="projetos.html">
+      <img class="footer" src="projetosFigmaImg/img.css/html2projetos.png" alt="Projetos">
+    </a>
 
-         <div>
-          <a href="projetos.html">
-          <img src="projetosFigmaImg/img.css/projetos.png" alt="Projetos">
-          </a>
-         </div>
-
-          <div>
-          <a href="figma.html">
-          <img src="projetosFigmaImg/img.css/figma.png" alt="Figma">
-          </a>
-          </div>
-
-    </div>  
+    <a href="figma.html">
+      <img class="footer" src="projetosFigmaImg/img.css/figma.png" alt="Figma">
+    </a>
+  </footer>
 </body>
+
 </html>
