--- a/projetos.html
+++ b/projetos.html
@@ -20,6 +20,6 @@
             
             A diversidade de temas mostra a versatililidade que a plataforma proporciona trabalhar no design e uso de componentes diversos, reproduzindo com fidelidade o produto final.
     </p>
-    <p1>Projetos</p1>
+    <p class="footer">Projetos</p>
 </body>
 </html>
