quarto dia de projeto. Páginas responsivas

--- a/figma.html
+++ b/figma.html
@@ -11,7 +11,7 @@
 <body>
 <h1>FIGMA</h1>    
 <h2>Sobre a ferramenta</h2>
-    <p>Praticidade e simplicidade definem o Figma como um 
+    <p class="texto">Praticidade e simplicidade definem o Figma como um 
             alidado no desenvolvimento de projetos em tempo real,
             pois permite interação de diversos desenvolvedores e 
             também permite o acompanhamento pelo cliente, per-
