--- a/projetos.html
+++ b/projetos.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Projetos</h1>
-    <p>Os projetos aqui apresentados foram realizados integralmente na plataforma FIGMA.
+    <p class="text">Os projetos aqui apresentados foram realizados integralmente na plataforma FIGMA.
 
             Estão aptos para realização de teste com usuários (UX) na versão mobile.
             
