--- a/romenia.html
+++ b/romenia.html
@@ -9,6 +9,7 @@
     <title>Romênia Ishiyama</title>
 </head>
 <body>
+    <div class:"container">
     <h1>Romênia Ishiyama</h1>
     <h2>Quem sou</h2>
     <p>
@@ -22,38 +23,34 @@
             Aliar as skills acumuladas dos anos anteriores de trabalho à transição de carreita é um pilar importante, que reflete e imprimi minha identidade na jornada profissional.
     </p>
 
-    <div class="absolute">
+    <div class="redes-sociais">
 
         <a href="romeniaishiyama@gmail.com" target="_blank"alt="e-mail">
-        <img src="projetosFigmaImg/img.css/email.png" width="2%" height="5%">
+        <img src="projetosFigmaImg/img.css/email.png" width="10%" height="25%">
         </a>
 
         <a href="https://github.com/Roms2019" target="_blank"alt="Github">
-        <img src="projetosFigmaImg/img.css/github.png" width="2%" height="5%">
+        <img src="projetosFigmaImg/img.css/github.png" width="10%" height="25%">
         </a>
 
         <a href="https://www.instagram.com/roms_flaneur" target="_blank" alt="Instagram">
-        <img src="projetosFigmaImg/img.css/instagram.png" width="2%" height="5%">
+        <img src="projetosFigmaImg/img.css/instagram.png" width="10%" height="25%">
         </a>
 
         <a href="https://twitter.com/Romeniaishiyama" target="_blank" alt="Twitter">
-        <img src="projetosFigmaImg/img.css/twitter.png" width="2%" height="5%">
+        <img src="projetosFigmaImg/img.css/twitter.png" width="10%" height="25%">
         </a>
 
         <a href="https://www.youtube.com/user/Romenia2008" target="_blank" alt="Youtube">
-        <img src="projetosFigmaImg/img.css/youtube.png" width="2%" height="5%">
+        <img src="projetosFigmaImg/img.css/youtube.png" width="10%" height="25%">
         </a>
 
         <a href="https://www.facebook.com/romeniaishiyama" target="_blank" alt="Facebook">
-        <img src="projetosFigmaImg/img.css/facebook.png" width="2%" height="5%">
+        <img src="projetosFigmaImg/img.css/facebook.png" width="10%" height="25%">
         </a>    
 
     </div>
-    
-    <footer>
-     <p>Romênia Ishiyama</p>
-    </footer>
-
+</div>
 </body>
 </html>
 
