Correção do link para a página de login  do figma corrigido. Está linkável.

--- a/figma.html
+++ b/figma.html
@@ -38,7 +38,7 @@
 
             <footer>
             <p>
-            <a href="www.figma.com">www.figma.com</a> 
+            <a href="https://www.figma.com">www.figma.com</a> 
             </p>
              
             <img class="figma" src="projetosFigmaImg/img.css/figma_fundo_branco.png">
