Criação da página email.html

--- a/romenia.html
+++ b/romenia.html
@@ -25,8 +25,8 @@
 
     <div class="redes-sociais">
 
-        <a href="romeniaishiyama@gmail.com" target="_blank"alt="e-mail">
-        <img src="projetosFigmaImg/img.css/email.png" width="30%" height="70%">
+        <a href="email.html" target="_blank"alt="e-mail">
+        <img class= "email" src="projetosFigmaImg/img.css/email.png" width="30%" height="70%">
         </a>
 
         <a href="https://github.com/Roms2019" target="_blank"alt="Github">
