--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <img class="blocos" src="projetosFigmaImg/img.css/html_casa_container.png" alt="casa_container">
       </a>
 
-      <a href="https://www.figma.com/proto/FbCCXZEWyjFyYcDaTsDT1d/Lidia-Brigadeiros?scaling=scale-down&node-id=93%3A0"
+      <a href="https://www.figma.com/file/FbCCXZEWyjFyYcDaTsDT1d/Lidia-Brigadeiros?node-id=0%3A1"
         target="_blank">
         <img class="blocos" src="projetosFigmaImg/img.css/html_lidia_brigadeiros.png" alt="Lidia_Brigadeiros">
       </a>
 
-      <a href="https://www.figma.com/proto/Hi36Fna9BevazBC01HJMzY/Match-Games?node-id=5%3A2&scaling=scale-down"
+      <a href="https://www.figma.com/file/Hi36Fna9BevazBC01HJMzY/Match-Games?node-id=0%3A1"
         target="_blank">
         <img class="blocos" src="projetosFigmaImg/img.css/html_match_games.png" alt="Match_games">
       </a>
@@ -38,12 +38,12 @@
         <img class="blocos" src="projetosFigmaImg/img.css/html_ilustra_terapia.png" alt="Ilustra_Terapia">
       </a>
 
-      <a href="https://www.figma.com/proto/o56u2lMf2AWqAswoPyky0t/Terapia?node-id=3%3A2&scaling=scale-down"
+      <a href="https://www.figma.com/file/o56u2lMf2AWqAswoPyky0t/Terapia?node-id=0%3A1"
         taget="_blank">
         <img class="blocos" src="projetosFigmaImg/img.css/html_terapia.png" alt="Terapia">
       </a>
 
-      <a href="https://www.figma.com/proto/P3DBJjfsAxjwYf0hjklpMO/Bolacha?node-id=3%3A2&scaling=scale-down"
+      <a href="https://www.figma.com/file/P3DBJjfsAxjwYf0hjklpMO/Bolacha?node-id=0%3A1"
         target="_blank">
         <img class="blocos" src="projetosFigmaImg/img.css/html_bolacha.png" alt="Bolacha">
       </a>
@@ -51,7 +51,7 @@
 
     <!-- 3 linha de cards -->
     <div class="div-color">
-      <a href="https://www.figma.com/proto/bzrXB6MCRDVVIpvY4xBQfW/Obo%C3%A9Brasil?node-id=27%3A28&scaling=min-zoom"
+      <a href="https://www.figma.com/file/bzrXB6MCRDVVIpvY4xBQfW/Obo%C3%A9Brasil?node-id=0%3A1"
         target="_blank">
         <img class="blocos" src="projetosFigmaImg/img.css/html_oboé_brasil.png" alt="Oboé_Brasil">
       </a>
